compiler/tests/fail/array_expansion/x86-64/export_return.jazz
export fn main () -> reg u64[3] {
  reg u64[3] r;

  inline int i;
  for i = 0 to 3 {
    r[i] = 0;
  }

  return r;
}
